--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -55,7 +55,7 @@ body.no-scroll {
 
   transform: translateX(-50%);
 
-  transition-property: top, opacity;
+  transition-property: top;
   transition-duration: 0.5s;
 }
 
